phase 1 issue fixing

--- a/css/LESS/itours-styles.less
+++ b/css/LESS/itours-styles.less
@@ -1201,7 +1201,7 @@ a:hover {
 }
 
 .ts-section-title {
-  font-size: 36px;
+  font-size: 30px;
   line-height: 50px;
   margin-bottom: 10px;
   font-style: normal;
@@ -1719,10 +1719,18 @@ a:hover {
 }
 
 .btn:hover {
-  border-radius: 0px;
   -webkit-box-shadow: 0 8px 15px rgba(0, 0, 0, 0.1);
   box-shadow: 0 8px 15px rgba(0, 0, 0, 0.1);
 }
+
+.abt-btn{
+    justify-content: center;
+    align-items: center;
+    display: flex;
+
+}
+
+
 
 .ts-update-section .row {
   margin-bottom: 40px;
@@ -2677,8 +2685,8 @@ h4.ts-service-title {
 .top-header .header-btn .header-offer-btn {
   display: block;
   background: -webkit-gradient(linear, left top, right top, from(#fbdb24), to(#ff5300));
-  background: -o-linear-gradient(left, #fbdb24, #ff5300);
-  background: linear-gradient(90deg, #fbdb24, #ff5300);
+  background: #f68c34;
+  background: #f68c34;
   font-size: 15px;
   font-weight: 500;
   text-transform: capitalize;
@@ -2693,8 +2701,8 @@ h4.ts-service-title {
  .header-btn-cta {
   display: block;
   background: -webkit-gradient(linear, left top, right top, from(#fbdb24), to(#ff5300));
-  background: -o-linear-gradient(left, #fbdb24, #ff5300);
-  background: linear-gradient(90deg, #fbdb24, #ff5300);
+  background: #f68c34;
+  background: #f68c34;
   font-size: 15px;
   font-weight: 500;
   text-transform: capitalize;
@@ -2707,6 +2715,12 @@ h4.ts-service-title {
   width:30%;
 }
 
+.header-btn-cta:hover {
+  background: #444444 !important;
+  color: #ffffff;
+  -webkit-box-shadow: none !important;
+          box-shadow: none !important;
+}
 
 .header-offer-btn .btn:hover {
   -webkit-box-shadow: none;
